sdk/metask/agentcore.h

typedef struct metask_agentcore_session metask_agentcore_session;
typedef struct metask_agentcore_skill_catalog metask_agentcore_skill_catalog;
typedef struct {
    const uint8_t *ptr;
    uint64_t len;
} metask_agentcore_bytes_view_v1;
typedef struct {
    uint8_t *ptr;
    uint64_t len;
} metask_agentcore_owned_bytes_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    metask_agentcore_session *session;
    uint64_t run_id;
    metask_agentcore_bytes_view_v1 session_id;
    uint64_t reserved[2];
} metask_agentcore_run_context_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    void *ctx;
    /* "Skill" is reserved for AgentCore's Run-local projection of a bound
     * catalog and is rejected as a Host tool name. */
    metask_agentcore_bytes_view_v1 name;
    metask_agentcore_bytes_view_v1 description;
    metask_agentcore_bytes_view_v1 input_schema_json;
    metask_agentcore_host_execute_fn_v1 execute;
    metask_agentcore_host_release_fn_v1 release_result;
    uint64_t reserved[2];
} metask_agentcore_host_tool_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    /* Names/descriptions/schemas share METASK_AGENTCORE_MAX_RUNTIME_METADATA_BYTES_V1;
     * each text field is at most METASK_AGENTCORE_MAX_METADATA_STRING_BYTES_V1. */
    const metask_agentcore_bytes_view_v1 *builtin_tools;
    uint64_t builtin_tool_count;
    const metask_agentcore_host_tool_v1 *host_tools;
    uint64_t host_tool_count;
    uint64_t reserved[4];
} metask_agentcore_runtime_config_v1;
/* event_json is tagged CoreEvent JSON and is borrowed only for this
 * synchronous callback. Unknown observation tags may be ignored.
 * METASK_AGENTCORE_EVENT_FATAL poisons the Session. Different Sessions may invoke the
 * same callback concurrently. */
typedef uint32_t (*metask_agentcore_on_event_fn_v1)(
    void *session_ctx,
    const metask_agentcore_run_context_v1 *run,
    metask_agentcore_bytes_view_v1 event_json);
/* UI requests are synchronous in ABI v1. The Host returns one JSON response:
 * {"answers":[{"values":[...]}]} or {"permission":"allow_once"}.
 * Only METASK_AGENTCORE_UI_ANSWERED consumes the response. METASK_AGENTCORE_UI_UNAVAILABLE is an ordinary
 * reusable outcome; fatal/unknown status poisons the Session.
 * Responses over METASK_AGENTCORE_MAX_UI_RESPONSE_BYTES_V1 are callback failures and poison
 * the Session. */
typedef uint32_t (*metask_agentcore_on_ui_request_fn_v1)(
    void *session_ctx,
    const metask_agentcore_run_context_v1 *run,
    metask_agentcore_bytes_view_v1 request_json,
    metask_agentcore_owned_bytes_v1 *out_response);
typedef void (*metask_agentcore_release_response_fn_v1)(
    void *session_ctx,
    metask_agentcore_owned_bytes_v1 *response);
/* Host owns ctx and keeps it valid until session_destroy succeeds. AgentCore
 * copies this descriptor during session_create but never frees ctx. */
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    void *ctx;
    metask_agentcore_on_event_fn_v1 on_event;
    metask_agentcore_on_ui_request_fn_v1 on_ui_request;
    metask_agentcore_release_response_fn_v1 release_response;
    uint64_t reserved[4];
} metask_agentcore_session_callbacks_v1;
/* Query is Session-independent so a consumer can render a Skill menu before
 * creating its first Task/Session. workspace_epoch is an opaque Host-supplied
 * byte token: canonical empty means no external generation; otherwise it is
 * interpreted only by byte equality within one canonical Workspace scope.
 * It need not be parseable, monotonic, or comparable across Hosts. Change it
 * when the Host's external Workspace binding generation changes. It enters
 * catalog_revision, so changing it can make input prepared for another bound
 * revision return METASK_AGENTCORE_STATUS_STALE_CATALOG. */
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    metask_agentcore_bytes_view_v1 workspace_root;
    metask_agentcore_bytes_view_v1 workspace_home;
    metask_agentcore_bytes_view_v1 workspace_epoch;
    uint64_t reserved[3];
} metask_agentcore_skill_catalog_query_v1;
/* New Skills use default_state_code. Each listed catalog Skill ID uses the
 * opposite state. The borrowed list must not contain duplicate or foreign
 * IDs and is copied before session_create/session_update_skills returns. */
typedef struct {
    uint32_t struct_size;
    uint32_t default_state_code;
    const metask_agentcore_bytes_view_v1 *exception_skill_ids;
    uint64_t exception_skill_id_count;
    uint64_t reserved[4];
} metask_agentcore_skill_selection_v1;
/* Canonical Tool(specifier) rules are borrowed for one call. AgentCore
 * validates, copies, and compiles the complete replacement atomically. */
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    const metask_agentcore_bytes_view_v1 *allow;
    uint64_t allow_count;
    const metask_agentcore_bytes_view_v1 *ask;
    uint64_t ask_count;
    const metask_agentcore_bytes_view_v1 *deny;
    uint64_t deny_count;
    uint64_t reserved[4];
} metask_agentcore_permission_rule_set_v1;
/* workspace_root is the execution base for relative paths used by the
 * supported built-in file tools and shell commands. It is not a filesystem
 * containment boundary: absolute paths remain valid unless the Host applies
 * a separate sandbox/policy. workspace_root must identify an existing
 * absolute path. workspace_home may be empty to use workspace_root; otherwise
 * it must be absolute. Provider credentials never
 * appear in event or diagnostic buffers. Prompts, model/tool/UI payloads may
 * contain sensitive data, so the Host owns logging and redaction. */
typedef struct {
    uint32_t struct_size;
    uint32_t provider_kind_code;
    uint32_t permission_mode_code;
    uint32_t shell_policy_code;
    /* These strings and allowed tool names share
     * METASK_AGENTCORE_MAX_SESSION_METADATA_BYTES_V1; each is at most
     * METASK_AGENTCORE_MAX_METADATA_STRING_BYTES_V1. */
    metask_agentcore_bytes_view_v1 api_key;
    /* This is the fixed provider model for the Session and all AgentCore Skill
     * fork children. A Skill model other than empty/"inherit" is unavailable
     * and cannot override this binding. */
    metask_agentcore_bytes_view_v1 model;
    metask_agentcore_bytes_view_v1 base_url;
    metask_agentcore_bytes_view_v1 workspace_root;
    metask_agentcore_bytes_view_v1 workspace_home;
    const metask_agentcore_bytes_view_v1 *allowed_tools;
    uint64_t allowed_tool_count;
    /* skill_catalog and skill_selection must both be NULL or both non-NULL.
     * A catalog must belong to this Runtime and canonical Workspace binding.
     * The selection is validated against that exact catalog. */
    metask_agentcore_skill_catalog *skill_catalog;
    const metask_agentcore_skill_selection_v1 *skill_selection;
    /* NULL means no imported rules. A non-NULL empty set has the same effective
     * meaning and is useful for sharing construction code with updates. */
    const metask_agentcore_permission_rule_set_v1 *permission_rules;
    uint64_t reserved[4];
} metask_agentcore_session_config_v1;