sdk/rust/src/raw.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_runtime_config_v1"]
        [::std::mem::size_of::<metask_agentcore_runtime_config_v1>() - 72usize];
    ["Alignment of metask_agentcore_runtime_config_v1"]
        [::std::mem::align_of::<metask_agentcore_runtime_config_v1>() - 8usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::reserved0"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, reserved0) - 4usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::builtin_tools"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, builtin_tools) - 8usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::builtin_tool_count"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, builtin_tool_count) - 16usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::host_tools"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, host_tools) - 24usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::host_tool_count"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, host_tool_count) - 32usize];
    ["Offset of field: metask_agentcore_runtime_config_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_runtime_config_v1, reserved) - 40usize];
};
pub type metask_agentcore_on_event_fn_v1 = ::std::option::Option<
    unsafe extern "C" fn(
        session_ctx: *mut ::std::os::raw::c_void,
        run: *const metask_agentcore_run_context_v1,
        event_json: metask_agentcore_bytes_view_v1,
    ) -> u32,
>;
pub type metask_agentcore_on_ui_request_fn_v1 = ::std::option::Option<
    unsafe extern "C" fn(
        session_ctx: *mut ::std::os::raw::c_void,
        run: *const metask_agentcore_run_context_v1,
        request_json: metask_agentcore_bytes_view_v1,
        out_response: *mut metask_agentcore_owned_bytes_v1,
    ) -> u32,
>;
pub type metask_agentcore_release_response_fn_v1 = ::std::option::Option<
    unsafe extern "C" fn(
        session_ctx: *mut ::std::os::raw::c_void,
        response: *mut metask_agentcore_owned_bytes_v1,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_session_callbacks_v1 {
    pub struct_size: u32,
    pub reserved0: u32,
    pub ctx: *mut ::std::os::raw::c_void,
    pub on_event: metask_agentcore_on_event_fn_v1,
    pub on_ui_request: metask_agentcore_on_ui_request_fn_v1,
    pub release_response: metask_agentcore_release_response_fn_v1,
    pub reserved: [u64; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_session_callbacks_v1"]
        [::std::mem::size_of::<metask_agentcore_session_callbacks_v1>() - 72usize];
    ["Alignment of metask_agentcore_session_callbacks_v1"]
        [::std::mem::align_of::<metask_agentcore_session_callbacks_v1>() - 8usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::reserved0"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, reserved0) - 4usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::ctx"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, ctx) - 8usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::on_event"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, on_event) - 16usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::on_ui_request"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, on_ui_request) - 24usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::release_response"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, release_response) - 32usize];
    ["Offset of field: metask_agentcore_session_callbacks_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_session_callbacks_v1, reserved) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_skill_catalog_query_v1 {
    pub struct_size: u32,
    pub reserved0: u32,
    pub workspace_root: metask_agentcore_bytes_view_v1,
    pub workspace_home: metask_agentcore_bytes_view_v1,
    pub workspace_epoch: metask_agentcore_bytes_view_v1,
    pub reserved: [u64; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_skill_catalog_query_v1"]
        [::std::mem::size_of::<metask_agentcore_skill_catalog_query_v1>() - 80usize];
    ["Alignment of metask_agentcore_skill_catalog_query_v1"]
        [::std::mem::align_of::<metask_agentcore_skill_catalog_query_v1>() - 8usize];
    ["Offset of field: metask_agentcore_skill_catalog_query_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_skill_catalog_query_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_skill_catalog_query_v1::reserved0"]
        [::std::mem::offset_of!(metask_agentcore_skill_catalog_query_v1, reserved0) - 4usize];
    ["Offset of field: metask_agentcore_skill_catalog_query_v1::workspace_root"]
        [::std::mem::offset_of!(metask_agentcore_skill_catalog_query_v1, workspace_root) - 8usize];
    ["Offset of field: metask_agentcore_skill_catalog_query_v1::workspace_home"]
        [::std::mem::offset_of!(metask_agentcore_skill_catalog_query_v1, workspace_home) - 24usize];
    ["Offset of field: metask_agentcore_skill_catalog_query_v1::workspace_epoch"][::std::mem::offset_of!(
        metask_agentcore_skill_catalog_query_v1,
        workspace_epoch
    ) - 40usize];
    ["Offset of field: metask_agentcore_skill_catalog_query_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_skill_catalog_query_v1, reserved) - 56usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_skill_selection_v1 {
    pub struct_size: u32,
    pub default_state_code: u32,
    pub exception_skill_ids: *const metask_agentcore_bytes_view_v1,
    pub exception_skill_id_count: u64,
    pub reserved: [u64; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_skill_selection_v1"]
        [::std::mem::size_of::<metask_agentcore_skill_selection_v1>() - 56usize];
    ["Alignment of metask_agentcore_skill_selection_v1"]
        [::std::mem::align_of::<metask_agentcore_skill_selection_v1>() - 8usize];
    ["Offset of field: metask_agentcore_skill_selection_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_skill_selection_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_skill_selection_v1::default_state_code"]
        [::std::mem::offset_of!(metask_agentcore_skill_selection_v1, default_state_code) - 4usize];
    ["Offset of field: metask_agentcore_skill_selection_v1::exception_skill_ids"]
        [::std::mem::offset_of!(metask_agentcore_skill_selection_v1, exception_skill_ids) - 8usize];
    ["Offset of field: metask_agentcore_skill_selection_v1::exception_skill_id_count"][::std::mem::offset_of!(
        metask_agentcore_skill_selection_v1,
        exception_skill_id_count
    ) - 16usize];
    ["Offset of field: metask_agentcore_skill_selection_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_skill_selection_v1, reserved) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_permission_rule_set_v1 {
    pub struct_size: u32,
    pub reserved0: u32,
    pub allow: *const metask_agentcore_bytes_view_v1,
    pub allow_count: u64,
    pub ask: *const metask_agentcore_bytes_view_v1,
    pub ask_count: u64,
    pub deny: *const metask_agentcore_bytes_view_v1,
    pub deny_count: u64,
    pub reserved: [u64; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_permission_rule_set_v1"]
        [::std::mem::size_of::<metask_agentcore_permission_rule_set_v1>() - 88usize];
    ["Alignment of metask_agentcore_permission_rule_set_v1"]
        [::std::mem::align_of::<metask_agentcore_permission_rule_set_v1>() - 8usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::reserved0"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, reserved0) - 4usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::allow"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, allow) - 8usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::allow_count"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, allow_count) - 16usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::ask"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, ask) - 24usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::ask_count"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, ask_count) - 32usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::deny"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, deny) - 40usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::deny_count"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, deny_count) - 48usize];
    ["Offset of field: metask_agentcore_permission_rule_set_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_permission_rule_set_v1, reserved) - 56usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_session_config_v1 {
    pub struct_size: u32,
    pub provider_kind_code: u32,
    pub permission_mode_code: u32,
    pub shell_policy_code: u32,
    pub api_key: metask_agentcore_bytes_view_v1,
    pub model: metask_agentcore_bytes_view_v1,
    pub base_url: metask_agentcore_bytes_view_v1,
    pub workspace_root: metask_agentcore_bytes_view_v1,
    pub workspace_home: metask_agentcore_bytes_view_v1,
    pub allowed_tools: *const metask_agentcore_bytes_view_v1,
    pub allowed_tool_count: u64,
    pub skill_catalog: *mut metask_agentcore_skill_catalog,
    pub skill_selection: *const metask_agentcore_skill_selection_v1,
    pub permission_rules: *const metask_agentcore_permission_rule_set_v1,
    pub reserved: [u64; 4usize],
}
